[tool.poetry]
name = "aiohttp_session_ws"
version = "1.1.0"
description = ""
authors = ["Devin Fee <devin@devinfee.com>"]

[tool.poetry.dependencies]
python = "^3.5"
aiohttp = "^3.4"
aiohttp_session = "^2.5"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", python="^3.6"}
coverage = "^4.5"
ipdb = {version = "^0.11.0", optional = true}
mypy = "^0.620.0"
pylint = "^2.1"
pytest = "^3.0"
pytest-asyncio = "^0.9.0"
tox = "^3.2"

[tool.poetry.extras]
development = ["black", "ipdb"]

[tool.black]
line-length = 80